# epeg

./: .gitignore  build-android-arm64.sh  build-android.sh  build-cygwin64-gcc.sh  build-ios.sh  build-osx.sh  build-win64.sh  configure.ac
src/lib/: Epeg.h  Makefile.am  epeg_create.c  epeg_main.c  epeg_private.h  epeg_xmp.c
win64vs/: epeg.sln  epeg.vcxproj  epeg.vcxproj.filters  getopt.h  libepeg.cpp  libepeg.sln  libepeg.vcxproj  libepeg.vcxproj.filters  stdafx.cpp  unistd.h
winvs/: CopyToUnity.cmd  CopyToVuforiaPrototype.cmd  config.h  epeg.sln  epeg.vcxproj  libepeg-uwp.vcxproj  libepeg-uwp.vcxproj.filters  libepeg.vcxproj  libepeg.vcxproj.filters
